--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "@dsquare-gbu/vue-app": "^1.0.2",
+        "@dsquare-gbu/vue-uses": "^1.0.0",
         "core-js": "^3.6.5",
         "vue": "^2.6.11",
-        "vue-router": "^3.2.0",
         "vuex": "^3.4.0"
     },
     "devDependencies": {
@@ -23,6 +24,8 @@
         "eslint": "^6.7.2",
         "eslint-plugin-vue": "^6.2.2",
         "node-sass": "^4.12.0",
+        "pug": "^3.0.0",
+        "pug-plain-loader": "^1.0.0",
         "sass-loader": "^8.0.2",
         "vue-template-compiler": "^2.6.11"
     }
