--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,5 @@ VUE_APP_TIMEZONE=UTC
 VUE_APP_COUNTRY=US
 VUE_APP_CURRENCY=USD
 VUE_APP_NUMBER_FORMAT=point_comma
+
+VUE_APP_MAX_CHUNK_UPLOAD_SIZE=
