--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,11 @@ VUE_APP_BUILD_PATH=dist
 VUE_APP_DEBUG=false
 VUE_APP_LOG_ONLY=
 
+VUE_APP_ID=base
 VUE_APP_NAME="Base"
-VUE_APP_EMAIL="base@dsquare.com.vn"
-VUE_APP_AUTHOR="Base"
-VUE_APP_DESCRIPTION="Base"
+VUE_APP_EMAIL="${VUE_APP_ID}@dsquare.com.vn"
+VUE_APP_AUTHOR="${VUE_APP_NAME}"
+VUE_APP_DESCRIPTION="${VUE_APP_NAME}"
 
 VUE_APP_TYPE=admin
 
@@ -29,9 +30,9 @@ VUE_APP_SERVICE_HEADER_TOKEN_AUTHORIZATION_NAME=Authorization
 VUE_APP_SERVICE_HEADER_BASIC_AUTHORIZATION=
 VUE_APP_SERVICE_HEADER_BASIC_AUTHORIZATION_EXCEPTION=
 
-VUE_APP_COOKIE_DEFAULT_NAME=base
-VUE_APP_COOKIE_DEVICE_NAME=base_device
-VUE_APP_COOKIE_SETTINGS_NAME=base_settings
+VUE_APP_COOKIE_DEFAULT_NAME=${VUE_APP_ID}
+VUE_APP_COOKIE_DEVICE_NAME="${VUE_APP_ID}_device"
+VUE_APP_COOKIE_SETTINGS_NAME="${VUE_APP_ID}_settings"
 VUE_APP_COOKIE_DISABLE_DEVICE=
 VUE_APP_COOKIE_DISABLE_SETTINGS=
 VUE_APP_COOKIE_DOMAIN=
