--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "vue-starter",
-    "version": "0.1.0",
+    "name": "@dsquare-gbu/vue-starter",
+    "version": "1.0.0",
     "private": true,
     "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint",
+        "serve": "npm run @run && vue-cli-service serve",
+        "build": "npm run @run && vue-cli-service build",
+        "lint": "npm run @run && vue-cli-service lint",
         "@run": "npm run @build && npm run @setup && npm run @compile",
         "@build": "babel ./run/src --out-dir ./run/dist --config-file ./babel.run-config.js --delete-dir-on-start --minified --source-maps",
         "@setup": "node ./run/dist/setup.js",
