--- a/public/.htaccess.example
+++ b/public/.htaccess.example
@@ -18,7 +18,7 @@
 AddDefaultCharset utf-8
 
 ### Set default document
-DirectoryIndex index.htm index.html index.php
+DirectoryIndex index.htm index.html
 
 ### Set mime for some specific file extension
 AddType application/json .json
