--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
         "@babel/cli": "^7.10.5",
         "@babel/core": "^7.11.1",
         "@babel/preset-env": "^7.11.0",
-        "@fortawesome/fontawesome-free": "^5.14.0",
         "@node-minify/core": "^6.0.0",
         "@node-minify/cssnano": "^6.0.0",
+        "@ttskch/select2-bootstrap4-theme": "^1.4.0",
         "@vue/cli-plugin-babel": "~4.4.0",
         "@vue/cli-plugin-eslint": "~4.4.0",
         "@vue/cli-plugin-router": "~4.4.0",
@@ -41,19 +41,19 @@
         "animate.css": "^4.1.0",
         "babel-eslint": "^10.1.0",
         "blueimp-canvas-to-blob": "^3.28.0",
-        "bootstrap": "^4.5.2",
         "cpx": "^1.5.0",
         "dotenv-packed": "^1.2.0",
         "eslint": "^6.7.2",
         "eslint-plugin-vue": "^6.2.2",
         "flag-icon-css": "^3.5.0",
         "fs-extra": "^9.0.1",
-        "jquery": "^3.5.1",
-        "jquery.easing": "^1.4.1",
         "node-sass": "^4.12.0",
         "pug": "^3.0.0",
         "pug-plain-loader": "^1.0.0",
         "sass-loader": "^8.0.2",
+        "select2": "^4.0.13",
+        "startbootstrap-sb-admin-2": "^4.1.1",
+        "tempusdominus-bootstrap-4": "^5.1.2",
         "vue-template-compiler": "^2.6.11"
     }
 }
