--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "init": "npm run @run",
-        "serve": "npm run @run && vue-cli-service serve",
-        "build": "npm run @run && vue-cli-service build",
-        "lint": "npm run @run && vue-cli-service lint",
-        "@run": "npm run @build && npm run @setup && npm run @compile",
+        "serve": "npm run init && vue-cli-service serve",
+        "build": "npm run init && vue-cli-service build",
+        "lint": "npm run init && vue-cli-service lint",
+        "init": "npm run @build && npm run @setup && npm run @compile",
         "@build": "babel ./run/src --out-dir ./run/dist --config-file ./babel.run-config.js --delete-dir-on-start --minified --source-maps",
         "@setup": "node ./run/dist/setup.js",
         "@compile": "node ./run/dist/compile.js"
@@ -21,7 +20,6 @@
         "@dsquare-gbu/vue-utils": "^1.0.30",
         "core-js": "^3.6.5",
         "cropperjs": "^1.5.7",
-        "moment": "^2.27.0",
         "vue": "^2.6.11",
         "vue-define": "^1.3.1",
         "vue-head": "^2.2.0"
