--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# Base - Any modification needs to be approved, except the space inside the block of TODO
+
 VUE_APP_ENV=production
 VUE_APP_BUILD_PATH=dist
 VUE_APP_DEBUG=false
@@ -45,3 +47,7 @@ VUE_APP_CURRENCY=USD
 VUE_APP_NUMBER_FORMAT=point_comma
 
 VUE_APP_MAX_CHUNK_UPLOAD_SIZE=
+
+# TODO: Extra env
+
+# TODO
