--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,7 @@ VUE_APP_SERVICE_URL=
 
 VUE_APP_SERVICE_CLIENT_ID=2
 VUE_APP_SERVICE_CLIENT_SECRET=
+VUE_APP_SERVICE_HEADER_SCREEN_NAME=X-Screen
 VUE_APP_SERVICE_HEADER_SETTINGS_NAME=X-Settings
 VUE_APP_SERVICE_HEADER_DEVICE_NAME=X-Device
 VUE_APP_SERVICE_HEADER_TOKEN_AUTHORIZATION_NAME=X-Authorization
