--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ VUE_APP_EMAIL="${VUE_APP_ID}@dsquare.com.vn"
 VUE_APP_AUTHOR="${VUE_APP_NAME}"
 VUE_APP_DESCRIPTION="${VUE_APP_NAME}"
 
-VUE_APP_TYPE=admin
+VUE_APP_TYPE=home
 
 VUE_APP_ADMIN_HOST=sub
 VUE_APP_ADMIN_HOST_SUB_PATH=/admin
