new way to build

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 
 VUE_APP_ENV=production
 VUE_APP_BUILD_PATH=dist
+VUE_APP_BUILD_COMPOSE=standalone
 VUE_APP_DEBUG=false
 VUE_APP_LOG_ONLY=
 
@@ -20,6 +21,10 @@ VUE_APP_ADMIN_URL=
 VUE_APP_HOME_HOST=sub
 VUE_APP_HOME_HOST_SUB_PATH=
 VUE_APP_HOME_URL=
+
+VUE_APP_ASSETS_URL=sub
+VUE_APP_ASSETS_HOST_SUB_PATH=/assets
+VUE_APP_ASSETS_URL=
 
 VUE_APP_SERVICE_HOST=sub
 VUE_APP_SERVICE_HOST_SUB_PATH=/api
