--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ VUE_APP_HOME_HOST=sub
 VUE_APP_HOME_HOST_SUB_PATH=
 VUE_APP_HOME_URL=
 
-VUE_APP_ASSETS_URL=sub
+VUE_APP_ASSETS_HOST=sub
 VUE_APP_ASSETS_HOST_SUB_PATH=/assets
 VUE_APP_ASSETS_URL=
 
