--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "eslint-plugin-vue": "^6.2.2",
         "flag-icon-css": "^3.5.0",
         "fs-extra": "^9.0.1",
+        "html2pug": "^4.0.0",
         "jquery": "^3.5.1",
         "jquery.easing": "^1.4.1",
         "node-sass": "^4.12.0",
