app key + encrypt

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Base - Any modification needs to be approved, except the space inside the block of TODO
 
 VUE_APP_ENV=production
+VUE_APP_KEY=
 VUE_APP_BUILD_PATH=dist
 VUE_APP_BUILD_COMPOSE=standalone
 VUE_APP_DEBUG=false
