--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
         "build": "npm run init && vue-cli-service build && npm run @build",
         "lint": "npm run init && vue-cli-service lint",
         "@run": "babel ./run/src --out-dir ./run/dist --config-file ./babel.run-config.js --delete-dir-on-start --minified --source-maps",
-        "@assets": "npm run @setup && npm run @compile",
-        "@setup": "node ./run/dist/setup.js",
-        "@compile": "node ./run/dist/compile.js",
+        "@key": "node ./run/dist/key.js",
+        "@assets": "npm run @assets-setup && npm run @assets-compile",
+        "@assets-setup": "node ./run/dist/setup.js",
+        "@assets-compile": "node ./run/dist/compile.js",
         "@build": "node ./run/dist/build.js",
         "@compose-pug": "node ./run/dist/compose.js --pug ./src/assets/compose/html ./src/assets/compose/pug",
         "@compose-vue": "node ./run/dist/compose.js --vue ./src/assets/compose/html ./src/assets/compose/pug ./src/assets/compose/vue ./src/views/templates/.vue.template"
@@ -20,7 +21,7 @@
         "@dsquare-gbu/vue-bus": "^1.2.0",
         "@dsquare-gbu/vue-services": "^1.3.6",
         "@dsquare-gbu/vue-uses": "^1.2.11",
-        "@dsquare-gbu/vue-utils": "^1.3.3",
+        "@dsquare-gbu/vue-utils": "^1.3.5",
         "core-js": "^3.8.0",
         "vue": "^2.6.12",
         "vue-define": "^1.3.2",
@@ -54,6 +55,7 @@
         "node-sass": "^4.12.0",
         "pug": "^3.0.0",
         "pug-plain-loader": "^1.0.0",
+        "random-bytes-js": "^1.0.0",
         "sass-loader": "^8.0.2",
         "vue-template-compiler": "^2.6.11"
     }
