--- a/.env.example
+++ b/.env.example
@@ -40,7 +40,7 @@ VUE_APP_SERVICE_HEADER_BASIC_AUTHORIZATION_EXCEPTION=
 VUE_APP_SERVICE_HEADER_SCREEN_NAME=X-Screen
 VUE_APP_SERVICE_HEADER_SETTINGS_NAME=X-Settings
 VUE_APP_SERVICE_HEADER_DEVICE_NAME=X-Device
-VUE_APP_SERVICE_HEADER_ENCRYPT_EXCEPTS=
+VUE_APP_SERVICE_HEADER_ENCRYPT_EXCEPTS=X-Screen,X-Settings,X-Device
 
 VUE_APP_COOKIE_DEFAULT_NAME=${VUE_APP_ID}
 VUE_APP_COOKIE_SETTINGS_NAME="${VUE_APP_ID}_settings"
