--- a/package.json
+++ b/package.json
@@ -17,46 +17,47 @@
         "@compose-vue": "node ./run/dist/compose.js --vue ./src/assets/compose/html ./src/assets/compose/pug ./src/assets/compose/vue ./src/views/templates/.vue.template"
     },
     "dependencies": {
-        "@dsquare-gbu/vue-app": "^1.2.8",
-        "@dsquare-gbu/vue-bus": "^1.2.0",
-        "@dsquare-gbu/vue-services": "^1.3.7",
-        "@dsquare-gbu/vue-uses": "^1.2.12",
-        "@dsquare-gbu/vue-utils": "^1.3.5",
-        "core-js": "^3.8.0",
+        "@dsquare-gbu/vue-app": "^1.4.0",
+        "@dsquare-gbu/vue-bus": "^1.4.0",
+        "@dsquare-gbu/vue-services": "^1.4.0",
+        "@dsquare-gbu/vue-uses": "^1.4.0",
+        "@dsquare-gbu/vue-utils": "^1.4.0",
+        "core-js": "^3.10.0",
         "vue": "^2.6.12",
         "vue-define": "^1.3.2",
         "vue-head": "^2.2.0"
     },
     "devDependencies": {
-        "@babel/cli": "^7.12.8",
-        "@babel/core": "^7.12.9",
-        "@babel/preset-env": "^7.12.7",
-        "@fortawesome/fontawesome-free": "^5.15.1",
-        "@node-minify/core": "^6.0.0",
-        "@node-minify/cssnano": "^6.0.0",
-        "@vue/cli-plugin-babel": "~4.4.0",
-        "@vue/cli-plugin-eslint": "~4.4.0",
-        "@vue/cli-plugin-router": "~4.4.0",
-        "@vue/cli-plugin-vuex": "~4.4.0",
-        "@vue/cli-service": "~4.4.0",
-        "animate.css": "^4.1.0",
+        "@babel/cli": "^7.13.14",
+        "@babel/core": "^7.13.14",
+        "@babel/preset-env": "^7.13.12",
+        "@fortawesome/fontawesome-free": "^5.15.3",
+        "@node-minify/core": "^6.2.0",
+        "@node-minify/cssnano": "^6.2.0",
+        "@vue/cli-plugin-babel": "~4.5.0",
+        "@vue/cli-plugin-eslint": "~4.5.0",
+        "@vue/cli-plugin-router": "~4.5.0",
+        "@vue/cli-plugin-vuex": "~4.5.0",
+        "@vue/cli-service": "~4.5.0",
+        "animate.css": "^4.1.1",
         "babel-eslint": "^10.1.0",
         "blueimp-canvas-to-blob": "^3.28.0",
-        "bootstrap": "^4.5.3",
+        "bootstrap": "^4.6.0",
         "cpx": "^1.5.0",
         "dotenv-packed": "^1.2.1",
         "eslint": "^6.7.2",
         "eslint-plugin-vue": "^6.2.2",
         "flag-icon-css": "^3.5.0",
-        "fs-extra": "^9.0.1",
+        "fs-extra": "^9.1.0",
         "html2pug": "^4.0.0",
-        "jquery": "^3.5.1",
+        "jquery": "^3.6.0",
         "jquery.easing": "^1.4.1",
         "node-sass": "^4.12.0",
-        "pug": "^3.0.0",
-        "pug-plain-loader": "^1.0.0",
+        "pug": "^3.0.2",
+        "pug-plain-loader": "^1.1.0",
         "random-bytes-js": "^1.0.0",
         "sass-loader": "^8.0.2",
-        "vue-template-compiler": "^2.6.11"
+        "vue-template-compiler": "^2.6.11",
+        "yargs": "^16.2.0"
     }
 }
