--- a/.env.example
+++ b/.env.example
@@ -42,7 +42,7 @@ VUE_APP_SERVICE_HEADER_CLIENT_ID_NAME=X-Client-Id
 VUE_APP_SERVICE_HEADER_SCREEN_NAME=X-Screen
 VUE_APP_SERVICE_HEADER_SETTINGS_NAME=X-Settings
 VUE_APP_SERVICE_HEADER_DEVICE_NAME=X-Device
-VUE_APP_SERVICE_HEADER_ENCRYPT_EXCEPTS=X-Screen,X-Settings,X-Device
+VUE_APP_SERVICE_HEADER_ENCRYPT_EXCEPTS=X-Client-Id,X-Screen,X-Settings,X-Device
 
 VUE_APP_COOKIE_DEFAULT_NAME="${VUE_APP_ID}_${VUE_APP_CLIENT}"
 VUE_APP_COOKIE_SETTINGS_NAME="${VUE_APP_ID}_${VUE_APP_CLIENT}_settings"
