--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ VUE_APP_AUTHOR="${VUE_APP_NAME}"
 VUE_APP_DESCRIPTION="${VUE_APP_NAME}"
 VUE_APP_KEYWORDS="${VUE_APP_NAME}"
 
-VUE_APP_CLIENT=admin
+VUE_APP_CLIENT=common
 
 VUE_APP_ADMIN_HOST=sub
 VUE_APP_ADMIN_HOST_SUB_PATH=/admin
