--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,7 @@ VUE_APP_SERVICE_URL=
 
 VUE_APP_SERVICE_CLIENT_ID=2
 VUE_APP_SERVICE_CLIENT_SECRET=
+VUE_APP_SERVICE_TOKEN_REFRESH_ENABLED=true
 VUE_APP_SERVICE_HEADER_TOKEN_AUTHORIZATION_NAME=X-Authorization
 VUE_APP_SERVICE_HEADER_BASIC_AUTHORIZATION=
 VUE_APP_SERVICE_HEADER_BASIC_AUTHORIZATION_EXCEPTION=
