--- a/.env.example
+++ b/.env.example
@@ -51,6 +51,8 @@ VUE_APP_COOKIE_DEVICE_NAME="${VUE_APP_ID}_${VUE_APP_CLIENT}_device"
 VUE_APP_COOKIE_DOMAIN=
 VUE_APP_COOKIE_INCLUDE_SUBDOMAINS=false
 
+VUE_APP_SESSION_STORE_HANDLER_KEY="${VUE_APP_ID}_${VUE_APP_CLIENT}_session"
+
 VUE_APP_LOCALE=en
 VUE_APP_TIMEZONE=UTC
 VUE_APP_COUNTRY=US
