--- a/public/.htaccess.example
+++ b/public/.htaccess.example
@@ -14,6 +14,8 @@
 #    Require ip 124.36.26.238
 #    # Ignore: Images
 #    Require expr %{REQUEST_URI} =~ m#^.+\.(jpg|jpeg|png|gif|svg|ico)$#
+#    # Ignore: Health check
+#    Require expr %{REQUEST_URI} =~ m#200\.html$#
 #    # Other must fill username and password
 #    Require valid-user
 # </RequireAny>
