--- a/public/web.config.example
+++ b/public/web.config.example
@@ -14,8 +14,8 @@
         // Ignore: IPs (JPN - Office)
         // Ignore: IPs (JPN - Office)
         <add key="IgnoreIPAddresses" value="113.161.68.31;113.161.68.89;113.43.219.94;124.36.26.238"/>
-        // Ignore: Images
-        <add key="IgnorePathRegex" value="^.+\.(jpg|jpeg|png|gif|svg|ico)$"/>
+        // Ignore: Images & Health check
+        <add key="IgnorePathRegex" value="\.(jpg|jpeg|png|gif|svg|ico)$|200\.html$"/>
         // Other must fill username and password
         <add key="Credentials" value="hakuhodo_base:Base@190708"/>
     </httpAuthModule>
