--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ VUE_APP_LOG_ONLY=
 
 VUE_APP_ID=base
 VUE_APP_NAME="Base"
-VUE_APP_EMAIL="${VUE_APP_ID}@dsquare.com.vn"
+VUE_APP_EMAIL="${VUE_APP_ID}@linhntaim.com"
 VUE_APP_AUTHOR="${VUE_APP_NAME}"
 VUE_APP_DESCRIPTION="${VUE_APP_NAME}"
 VUE_APP_KEYWORDS="${VUE_APP_NAME}"
